// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render hero 1`] = `
<section>
  <div
    className="heroContainer"
  >
    <img
      alt="hero-image"
      src="https://img.gtvcdn.com/cdn/farfuture/Ei4zd5AS7sPaW63_i1saYcvPZkjutLGuv-euzKUStRI/mtime%3A1461683420/sites/default/files/imagecache/term_hero_1440x300/term_images/metaphysics_2.jpg"
    />
    <div
      className="text"
    >
      <h2>
        Metaphysics
      </h2>
      <p
        className="hidden-xs"
      >
        <small>
          There's more to our universe than meets the eye. In this thought-provoking video collection, you'll discover stories of scientific exploration, spiritual metaphysics, alternate realities and mystic messages. Gaia has scoured the globe to bring you the best in metaphysical videos that encourage you to expand your horizons and think outside the box.
        </small>
      </p>
    </div>
  </div>
</section>
`;

exports[`should render hero component without hero data 1`] = `
<section>
  <div
    className="heroContainer"
  >
    <img
      alt="hero-image"
    />
    <div
      className="text"
    >
      <h2 />
      <p
        className="hidden-xs"
      >
        <small />
      </p>
    </div>
  </div>
</section>
`;
